--- a/html/help.html
+++ b/html/help.html
@@ -42,16 +42,23 @@
                     <p>How can you use Join App</p>
                 </div>
                 <div class="add-task">
-                    <h3>How can you Add a new task</h3>
+
                     <!-- List -->
                     <ol>
                         <li>Fill in the task name on "Title".</li>
                         <li>Click on calendar icon and select the due date.</li>
                         <li>Select urgency by clicking on the respective fields.</li>
-                        <li>Fill in the description to descirpe the task</li>
+                        <li>Fill in the description to descirpe the task.</li>
                         <li>Click the "assigned to" you can choose other users who should work on that task.</li>
-                        <li>After filling up all the Inputs Fiels click on Create Task</li>
+                        <li>After filling up all the Inputs Fiels click on Create Task, you can find created tasks at
+                            "Backlog"</li>
+                        <li>In "Backlog" you can click on Task and move it to the "Board"</li>
+                        <li>In Board you can see the Task in "To Do" Section. </li>
+                        <li>You can move the Task from section to another by drag the Task with the Mouse and Drop it in
+                            the next Section.</li>
+
                     </ol>
+
                 </div>
             </div>
 
