--- a/html/help.html
+++ b/html/help.html
@@ -51,8 +51,8 @@
                         <li>Fill in the description to descirpe the task.</li>
                         <li>Click the "assigned to" you can choose other users who should work on that task.</li>
                         <li>After filling up all the Inputs Fiels click on Create Task, you can find created tasks at
-                            "Backlog"</li>
-                        <li>In "Backlog" you can click on Task and move it to the "Board"</li>
+                            "Backlog".</li>
+                        <li>In "Backlog" you can click on Task and move it to the "Board".</li>
                         <li>In Board you can see the Task in "To Do" Section. </li>
                         <li>You can move the Task from section to another by drag the Task with the Mouse and Drop it in
                             the next Section.</li>
