--- a/html/help.html
+++ b/html/help.html
@@ -11,12 +11,10 @@
     <!-- Google Fonts Begin -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <!-- Google Fonts End -->
     <!-- Bootstrap Begin -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Bootstrap End -->
     <link rel="stylesheet" href="../styles/mainStyle.css">
     <link rel="stylesheet" href="../styles/sidebar.css">
@@ -36,34 +34,25 @@
 
         <main class="right-container border-spacing">
             <!-- Unique content START -->
-            <div class="container">
-                <div class="title">
-                    <h1>HELP</h1>
-                    <p>How can you use Join App</p>
-                </div>
-                <div class="add-task">
-
-                    <!-- List -->
-                    <ol>
-                        <li>Fill in the task name on "Title".</li>
-                        <li>Click on calendar icon and select the due date.</li>
-                        <li>Select urgency by clicking on the respective fields.</li>
-                        <li>Fill in the description to descirpe the task.</li>
-                        <li>Click the "assigned to" you can choose other users who should work on that task.</li>
-                        <li>After filling up all the Inputs Fiels click on Create Task, you can find created tasks at
-                            "Backlog".</li>
-                        <li>In "Backlog" you can click on Task and move it to the "Board".</li>
-                        <li>In Board you can see the Task in "To Do" Section. </li>
-                        <li>You can move the Task from section to another by drag the Task with the Mouse and Drop it in
-                            the next Section.</li>
-
-                    </ol>
-
-                </div>
+            <header>
+                <h1>HELP</h1>
+                <span class="title-description">How can you use Join App</span>
+            </header>
+            <div class="help-container">
+                <!-- List -->
+                <ol>
+                    <li>Fill in the task name on "Title".</li>
+                    <li>Click on calendar icon and select the due date.</li>
+                    <li>Select urgency by clicking on the respective fields.</li>
+                    <li>Fill in the description to descirpe the task.</li>
+                    <li>Click the "assigned to" you can choose other users who should work on that task.</li>
+                    <li>After filling up all the Inputs Fiels click on Create Task, you can find created tasks at "Backlog".
+                    </li>
+                    <li>In "Backlog" you can click on Task and move it to the "Board".</li>
+                    <li>In Board you can see the Task in "To Do" Section. </li>
+                    <li>You can move the Task from section to another by drag the Task with the Mouse and Drop it in the next Section.</li>
+                </ol>
             </div>
-
-
-
             <!-- Unique content END -->
         </main>
     </div>
