--- a/html/index.html
+++ b/html/index.html
@@ -38,7 +38,7 @@
                 <h1>Add Task</h1>
                 <span class="title-description">Learning Management System Project</span>
             </header>
-            <form action="" onsubmit="addTask(); return false;" class="add-task-form needs-validation" novalidate>
+            <form action="" onsubmit="addTask(); return false;" class="add-task-form needs-validation" novalidate autocomplete="off">
                 <div class="add-task-form--left">
                     <div class="mb-3">
                         <label for="exampleFormControlInput1" class="form-label">TITLE</label>
