improve help and add screenshots

--- a/html/help.html
+++ b/html/help.html
@@ -36,21 +36,21 @@
             <!-- Unique content START -->
             <header>
                 <h1>HELP</h1>
-                <span class="title-description">How can you use Join App</span>
+                <span class="title-description">How to use the Join app</span>
             </header>
             <div class="help-container">
                 <!-- List -->
                 <ol>
-                    <li>Fill in the task name on "Title".</li>
-                    <li>Click on calendar icon and select the due date.</li>
-                    <li>Select urgency by clicking on the respective fields.</li>
-                    <li>Fill in the description to descirpe the task.</li>
-                    <li>Click the "assigned to" you can choose other users who should work on that task.</li>
-                    <li>After filling up all the Inputs Fiels click on Create Task, you can find created tasks at "Backlog".
-                    </li>
-                    <li>In "Backlog" you can click on Task and move it to the "Board".</li>
-                    <li>In Board you can see the Task in "To Do" Section. </li>
-                    <li>You can move the Task from section to another by drag the Task with the Mouse and Drop it in the next Section.</li>
+                    <li>Create a task on the "Add Task" page</li>
+                    <img src="../imgs/help/01_addTask.png" alt="AddTask" class="help-img">
+                    <li>You can find and edit the created tasks on the "Baklog" page</li>
+                    <img src="../imgs/help/02_backlog.png" alt="Backlog" class="help-img">
+                    <li>Click on a task to edit it. Here it can be sent to the "Board" page, edited or deleted</li>
+                    <img src="../imgs/help/03_edit_task.png" alt="Edit Task" class="help-img">
+                    <li>The tasks sent to the "Board" page are displayed first in the "Todo" column and can be moved with drag & drop depending on the processing status.</li>
+                    <img src="../imgs/help/04_board.png" alt="Board" class="help-img">
+                    <li>Click on a task to edit it. Here it can be removed from the "Board" and sent to the "Backlog" page, edited or deleted</li>
+                    <img src="../imgs/help/05_edit_task.png" alt="Edit Task" class="help-img">
                 </ol>
             </div>
             <!-- Unique content END -->
