--- a/html/help.html
+++ b/html/help.html
@@ -47,7 +47,7 @@
                     <img src="../imgs/help/02_backlog.png" alt="Backlog" class="help-img">
                     <li>Click on a task to edit it. Here it can be sent to the "Board" page, edited or deleted</li>
                     <img src="../imgs/help/03_edit_task.png" alt="Edit Task" class="help-img">
-                    <li>The tasks sent to the "Board" page are displayed first in the "Todo" column and can be moved with drag & drop depending on the processing status.</li>
+                    <li>The tasks sent to the "Board" page are displayed first in the "To Do" column and can be moved with drag & drop depending on the processing status.</li>
                     <img src="../imgs/help/04_board.png" alt="Board" class="help-img">
                     <li>Click on a task to edit it. Here it can be removed from the "Board" and sent to the "Backlog" page, edited or deleted</li>
                     <img src="../imgs/help/05_edit_task.png" alt="Edit Task" class="help-img">
