--- a/html/board.html
+++ b/html/board.html
@@ -47,27 +47,27 @@
                     <div class="border-title">
                         <h4> To Do</h4>
                     </div>
-                    <div class="border-content" id="todo" ondrop="moveTo('todo'); removeHighlight('todo')" ondragleave="removeHighlight('todo')" ondragover="allowDrop(event); highlight('todo')">
+                    <div class="border-content" id="todo" ondrop="drop('todo'); removeHighlight('todo')" ondragleave="removeHighlight('todo')" ondragover="allowDrop(event); highlight('todo')">
                     </div>
                 </div>
                 <div class="border-col">
                     <div class="border-title">
                         <h4> In Progress</h4>
                     </div>
-                    <div class="border-content" id="inProgress" ondrop="moveTo('inProgress'); removeHighlight('inProgress')" ondragleave="removeHighlight('inProgress')" ondragover="allowDrop(event); highlight('inProgress')"></div>
+                    <div class="border-content" id="inProgress" ondrop="drop('inProgress'); removeHighlight('inProgress')" ondragleave="removeHighlight('inProgress')" ondragover="allowDrop(event); highlight('inProgress')"></div>
                 </div>
                 <div class="border-col">
                     <div class="border-title">
                         <h4> Testing</h4>
                     </div>
-                    <div class="border-content" id="testing" ondrop="moveTo('testing'); removeHighlight('testing')" ondragleave="removeHighlight('testing')" ondragover="allowDrop(event); highlight('testing')">
+                    <div class="border-content" id="testing" ondrop="drop('testing'); removeHighlight('testing')" ondragleave="removeHighlight('testing')" ondragover="allowDrop(event); highlight('testing')">
                     </div>
                 </div>
                 <div class="border-col">
                     <div class="border-title">
                         <h4>Done</h4>
                     </div>
-                    <div class="border-content" id="done" ondrop="moveTo('done'); removeHighlight('done')" ondragleave="removeHighlight('done')" ondragover="allowDrop(event); highlight('done')">
+                    <div class="border-content" id="done" ondrop="drop('done'); removeHighlight('done')" ondragleave="removeHighlight('done')" ondragover="allowDrop(event); highlight('done')">
                     </div>
                 </div>
             </div>
