--- a/html/backlog.html
+++ b/html/backlog.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <!-- Google Fonts End -->
     <!-- Fontawesome Begin -->
-    <script src="https://kit.fontawesome.com/f4ed45d206.js" crossorigin="anonymous"></script>
+    <link href="../fontawesome/css/all.css" rel="stylesheet">
     <!-- Fontawesome End -->
     <!-- Bootstrap Begin -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
