--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -4,7 +4,7 @@
         <nav id="nav-elements" class="sidebar-nav">
             <a href="./board.html" id="nav-element-board">Board</a>
             <a href="./backlog.html" id="nav-element-backlog">Backlog</a>
-            <a href="./index.html" id="nav-element-index">Add Task</a>
+            <a href="./add_task.html" id="nav-element-add_task">Add Task</a>
             <a href="./help.html" id="nav-element-help">Help</a>
             <a href="./about.html" id="nav-element-about">About</a>
         </nav>
