fix missing script

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -18,7 +18,7 @@
     <script src="../scripts/main.js"></script>
     <script src="../scripts/include.js"></script>
     <script src="../scripts/sidebar.js"></script>
-    <script src="../scripts/index.js"></script>
+    <script src="../scripts/add_task.js"></script>
 </head>
 
 <body onload="init()">
