--- a/html/backlog.html
+++ b/html/backlog.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="../assets/img/logo.png">
     <title>Join</title>
     <!-- Fontawesome Begin -->
-    <link href="../fontawesome/css/all.css" rel="stylesheet">
+    <link href="../assets/fontawesome/css/all.css" rel="stylesheet">
     <!-- Fontawesome End -->
     <!-- Bootstrap Begin -->
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
