--- a/html/board.html
+++ b/html/board.html
@@ -9,7 +9,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="../assets/img/logo.png">
     <!-- Fontawesome Begin -->
-    <link href="../fontawesome/css/all.css" rel="stylesheet">
+    <link href="../assets/fontawesome/css/all.css" rel="stylesheet">
     <!-- Fontawesome End -->
     <!-- Bootstrap Begin -->
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
