--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div id="login-messages" class="login-messages d-none"></div>
         </form>
     </div>
-    <a class="contact-link" href="mailto: webmaster@example.de"><img src="imgs/icons/help.svg" alt="Help" title="You need help? Contact the webmasters here!"></a>
+    <a class="contact-link" href="mailto: webmaster@example.de"><img src="./assets/img/icons/help.svg" alt="Help" title="You need help? Contact the webmasters here!"></a>
 </body>
 
 </html>
