add guest login functionality

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
                 </div>
                 <span>Create new account</span>
             </div>
+            <div class="input-group mb-3">
+                <div class="checkbox-input">
+                    <input onclick="guestLogin()" id="create-account-checkbox" class="form-check-input mt-0" type="checkbox" value="1" aria-label="Create new account">
+                </div>
+                <span>Login as guest</span>
+            </div>
             <button type="submit" class="btn btn-primary">Send</button>
             <div id="login-messages" class="login-messages d-none"></div>
         </form>
